--- a/CSS/vezba1.css
+++ b/CSS/vezba1.css
@@ -1,30 +1,26 @@
-@font-face{
-    font-family: "AmaticSC-Regular";
-    src:url("font/novi_font/AmaticSC-Regular.ttf");
-}
-body{
-     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   
-}
-
 .first{
-    font-family: 'Fascinate Inline', cursive;
-    font-weight: bold;
+    text-align: left;
 }
 .second{
-    font-family:'Times New Roman', Times, serif;
-    font-style: oblique;
+    text-align: right;
+}
+.third{
+    text-align: center;
+}
+a{
+    color: red;
+    text-shadow: 47px -3px 19px rgba(223, 140, 131, 0.86);
+}
+a:visited {
+    color:black;
+}
+a:hover{
+    color:green;
+}
+a :active{
+    color:blue;
+
 
 }
-/*.third{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}*/
-span {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: hotpink;
-    font-weight: bold;
-    font-style: italic;
-}
-h1 {
-    font-family: "AmaticSC-Regular";
-}
+
+
