--- a/bootstrap/sass/_navbar.scss
+++ b/bootstrap/sass/_navbar.scss
@@ -13,6 +13,12 @@
     .navbar-light .navbar-nav .nav-link {
         color: white;
     }
+
+    
+        a .nav-link{
+            float: right;
+        }
+    
 }
 
 
