Radio sam Festival i FOotball

--- a/JS/s4_d4/projekat festival i forme/css/main.css
+++ b/JS/s4_d4/projekat festival i forme/css/main.css
@@ -1,11 +1,35 @@
 .container{
+    margin: 20px auto;
+    width: 50%;
     padding: 20px 100px;
-    background: lightcoral;
+    background: rgb(168, 191, 171);
     border: firebrick 2px double;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+h2{
+    color: firebrick;
+    font-size: 2.3em;
+    font-weight: 900;
+
 }
 
 input, select{
     display: block;
     margin: 10px auto;
+    padding: 10px;
+    font-weight: bold;
+}
+ul{
+    list-style-type: none;
+}
+.button{
+    width: 50%;
+    background: firebrick;
+    border-radius: 10px;
+    font-size: 1.2em;
+    text-align: center;
+}
+#error{
+    text-align: left;
 }
