--- a/kod_kuce/football/style.css
+++ b/kod_kuce/football/style.css
@@ -10,19 +10,15 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    position: relative; 
-    z-index: 1;
     height: 100%; 
    
 }
 
 #player{
     z-index: 2;
-    position: absolute;
+    position: relative;
+    top: 0;
+    left: 0;
     width: 100px;
     
 } 
-button{
-    
-    
-}
