--- a/projekti/style.css
+++ b/projekti/style.css
@@ -28,5 +28,20 @@ a:hover{
     text-decoration:none;
     color: rgb(61, 61, 99);
 }
+#singleImage {
+    width: 80%;
+    margin-bottom: 10px;
+}
+
+footer{
+    margin-top: 10px;
+    background: black;
+    color: white;
+    text-align: center;
+    height: 40px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 
 /*# sourceMappingURL=style.css.map */
