--- a/projects/bitshow(vanilla)/style.css
+++ b/projects/bitshow(vanilla)/style.css
@@ -1,23 +1,19 @@
 #bitshow{
     color: white;
 }
-
 h1{
     text-align: center;
     margin: 20px;
 }
-
 .placement {
     text-align: center;
 
 } 
-
 .placement img {
     margin-left: auto;
 	margin-right: auto;
 	display: block;
 }
-
 a {
     display: block;
     font-size: 1.5em;
@@ -32,7 +28,6 @@ a:hover{
     width: 80%;
     margin-bottom: 10px;
 }
-
 footer{
     margin-top: 10px;
     background: black;
@@ -43,5 +38,10 @@ footer{
     bottom: 0;
     width: 100%;
 }
+#showSearch{
+    position: relative;
+    top: 56px;
+}
+
 
 /*# sourceMappingURL=style.css.map */
