finishing css in bitshow

--- a/projects/bitshow/src/index.css
+++ b/projects/bitshow/src/index.css
@@ -2,15 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  
 }
-.cover-image{
-  /* height:40%;  */
-}
-/* footer{
-  min-height: 100%;
-} */
-#accordion{
-  /* width: 64%; */
+#root { 
+  background: url("https://s-media-cache-ak0.pinimg.com/originals/21/2a/4b/212a4b92380aa6aa7d2ad39d49138fd8.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 a:hover{
   text-decoration: none;
@@ -25,3 +24,7 @@ footer {
   background:rgb(0, 0, 0);
   margin-bottom: 0px;
 }
+/* html{
+  filter: blur(20px) grayscale(20%);
+} */
+
