--- a/projects/bitshow/src/common/Header.css
+++ b/projects/bitshow/src/common/Header.css
@@ -1,5 +1,7 @@
 nav{
-    background: -moz-linear-gradient(-45deg, rgba(255,0,0,1) 1%, rgba(255,0,0,0.7) 29%, rgba(255,0,0,0.7) 44%, rgba(250,7,8,0.7) 46%, rgba(178,109,137,1) 77%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(255,0,0,1) 1%,rgba(255,0,0,0.7) 29%,rgba(255,0,0,0.7) 44%,rgba(250,7,8,0.7) 46%,rgba(178,109,137,1) 77%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(255,0,0,1) 1%,rgba(255,0,0,0.7) 29%,rgba(255,0,0,0.7) 44%,rgba(250,7,8,0.7) 46%,rgba(178,109,137,1) 77%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: #D36135;
+}
+
+#bitshow{
+    font-family: 'Bungee', cursive;
 }
