--- a/projects/bitshow/src/index.css
+++ b/projects/bitshow/src/index.css
@@ -4,12 +4,13 @@ body {
   font-family: sans-serif;
   
 }
-#root { 
-  background: url("https://s-media-cache-ak0.pinimg.com/originals/21/2a/4b/212a4b92380aa6aa7d2ad39d49138fd8.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+#image-cover { 
+ position: absolute;
+ z-index: -1;
+ width: 100%;
+ height:100%;
+ -webkit-filter: blur(5px);
+ filter: blur(5px);
 }
 a:hover{
   text-decoration: none;
@@ -24,7 +25,11 @@ footer {
   background:rgb(0, 0, 0);
   margin-bottom: 0px;
 }
-/* html{
-  filter: blur(20px) grayscale(20%);
-} */
+#root{
+  background: linear-gradient(-90deg, #bdc3c7, #2c3e50);
+}
+h1, h2, h3 {
+  font-family: 'Bungee', cursive;
+}
+
 
